Se genera proceso para para que las imagenes cargen mas rapido en desarrollo
